# haf

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.jmeter  README.md  pgvetor.md  test_system.sh
src/hive_fork_manager/: CMakeLists.txt  Readme.md  app_api.sql  app_api_impl.sql  app_context.sql  app_indices.sql  asset_utils.sql  authorization.sql  block_day_stats_all_op_view.sql  block_day_stats_view.sql  block_views_for_head_block.sql  blocks_views_for_contexts.sql  consensus_state_provider_helpers.sql  convert_blocks.sql  events_queue.sql  extract_set_witness_properties.sql  forks.sql  get_impacted_accounts.sql  get_impacted_balances.sql  get_keyauths.sql  get_legacy_style_operation.sql  get_metadata.sql  get_required_authorities.sql  globals.sql  hive_fork_manager.control  hive_fork_manager.control.in  hive_fork_manager_save_restore_views.sql  hive_fork_manager_update_script_generator.sh.in  hived_api.sql  hived_api_impl.sql  hived_api_impl_indexes.sql  hived_connections.sql  irreversible_blocks.sql  json_play.sql  lite_accounts.sql  lite_accounts_helpers.sql  logs.sql  logs_schema.sql  postgres_save_restore_views.sql  reversible_blocks.sql  (+7 more)
src/hive_fork_manager/api_helpers/: block_api_support.sql
src/hive_fork_manager/application_loop/: contexts_log.sql  contexts_log_api.sql  loop.sql  stages.sql  stages_functions.sql
src/hive_fork_manager/application_rollback/: rollback.sql  rollback_data.sql
src/hive_fork_manager/context_rewind/: back_from_fork.sql  data_schema.sql  data_schema_types.sql  detach_table.sql  event_triggers.sql  hash_table_schema.sql  irreversible.sql  names.sql  register_table.sql  rewind_api.sql  sink_id_functions.sql  table_schema.sql  triggers.sql
src/hive_fork_manager/doc/applications/: haf_account_creation_fee_follower.py  haf_memo_scanner.py  haf_new_account_collector.py
src/hive_fork_manager/doc/examples/: app_tx_rollback.sql  hive_accounts_state_provider.py  hive_accounts_state_provider_non_fork.py  hive_fork_app.py  hive_non_fork_app.py
src/hive_fork_manager/operations/hive/: account_create_operation.sql  account_create_with_delegation_operation.sql  account_update2_operation.sql  account_update_operation.sql  account_witness_proxy_operation.sql  account_witness_vote_operation.sql  cancel_transfer_from_savings_operation.sql  change_recovery_account_operation.sql  claim_account_operation.sql  claim_reward_balance2_operation.sql  claim_reward_balance_operation.sql  collateralized_convert_operation.sql  comment_operation.sql  comment_options_operation.sql  convert_operation.sql  create_claimed_account_operation.sql  custom_binary_operation.sql  custom_json_operation.sql  custom_operation.sql  decline_voting_rights_operation.sql  delegate_vesting_shares_operation.sql  delete_comment_operation.sql  escrow_approve_operation.sql  escrow_dispute_operation.sql  escrow_release_operation.sql  escrow_transfer_operation.sql  feed_publish_operation.sql  limit_order_cancel_operation.sql  limit_order_create2_operation.sql  limit_order_create_operation.sql  pow2_operation.sql  pow_operation.sql  recover_account_operation.sql  recurrent_transfer_operation.sql  report_over_production_operation.sql  request_account_recovery_operation.sql  reset_account_operation.sql  set_reset_account_operation.sql  set_withdraw_vesting_route_operation.sql  transfer_from_savings_operation.sql  (+7 more)
src/hive_fork_manager/operations/smt/: smt_contribute_operation.sql  smt_create_operation.sql  smt_set_runtime_parameters_operation.sql  smt_set_setup_parameters_operation.sql  smt_setup_emissions_operation.sql  smt_setup_operation.sql
src/hive_fork_manager/operations/sps/: create_proposal_operation.sql  proposal_pay_operation.sql  remove_proposal_operation.sql  update_proposal_operation.sql  update_proposal_votes_operation.sql
src/hive_fork_manager/operations/types/: asset.sql  authority.sql  block_header.sql  comment_options_extension.sql  curve_id.sql  domains.sql  extensions.sql  hive_operation.sql  legacy_chain_properties.sql  pow.sql  pow2.sql  smt_emissions_unit.sql  smt_generation_policy.sql  smt_runtime_parameter.sql  smt_setup_parameter.sql  update_proposal_extension.sql
src/hive_fork_manager/operations/virtual/: account_created_operation.sql  author_reward_operation.sql  changed_recovery_account_operation.sql  clear_null_account_balance_operation.sql  comment_benefactor_reward_operation.sql  comment_payout_update_operation.sql  comment_reward_operation.sql  consolidate_treasury_balance_operation.sql  curation_reward_operation.sql  delayed_voting_operation.sql  effective_comment_vote_operation.sql  expired_account_notification_operation.sql  fill_order_operation.sql  (+22 more)
src/hive_fork_manager/pruning/: prune_irreversible_blocks.sql
src/hive_fork_manager/shared_lib/: CMakeLists.txt  consensus_state_provider_cache.cpp  consensus_state_provider_cache.hpp  consensus_state_provider_replay.cpp  consensus_state_provider_replay.hpp  driver_main.cpp  extract_set_witness_properties.cpp  extract_set_witness_properties.hpp  from_jsonb.cpp  from_jsonb.hpp  from_variant_to_full_block_ptr.cpp  l2_types.cpp  l2_types.hpp  mtlk_main.cpp  op_iterator.hpp  operation_base.cpp  operation_conversion.cpp  operation_conversion.hpp  operation_id.cpp  operation_types.cpp  pq_operation_base.hpp  pqxx_impl.cpp  pqxx_impl.hpp  pqxx_op_iterator.cpp  pqxx_op_iterator.hpp  pqxx_related.cpp  pxx.hpp  pxx_new_types.hpp  spixx.cpp  spixx.hpp  spixx_impl.cpp  spixx_impl.hpp  time_probe.hpp  to_jsonb.cpp  to_jsonb.hpp  utilities.cpp
src/hive_fork_manager/state_providers/: accounts.sql  bw_keyauths.sql  consensus_state_provider.sql  current_account_balance.sql  driver_main.cpp  keyauth.sql  keyauth_types.sql  metadata.sql  state_provider.template  update_providers.sql
src/hive_fork_manager/types/: cast_functions.sql  casts.sql  domains.sql  process_operation.sql  types.sql
src/variant/src/: CMakeLists.txt  variant.cpp  variant.h
tests/integration/functional/: CMakeLists.txt
tests/unit/sharedlib/: CMakeLists.txt  unpack_array_crash.cpp
(+892 files in other folders)
